# horses

./: .envrc  .gitignore  :w  Dockerfile  Dockerfile.bak  Dockerfile.haskell  Dockerfile.nix  Makefile  README.md  cabal.project  cabal.project.freeze  docker-compose.yml  docker.yml  flake.nix  format.sh  function-boys.cabal  generate-types.sh  integration-2.sh  integration-live.sh  integration.sh  mimsa.cabal  package.yaml  shell.nix  stack.yaml  swagger.config.json
backends/: backends.cabal
backends/benchmark/: Spec.hs
backends/src/Language/Mimsa/: Backend.hs
backends/static/backend/es-modules-js/: stdlib.mjs
backends/static/backend/typescript/: stdlib.ts
backends/static/modules/: String.mimsa
backends/test/: Spec.hs
backends/test/Test/Actions/: Evaluate.hs
backends/test/modules/: 1.mimsa  7.mimsa  8.mimsa
benchmarks/: benchmarks.cabal
compiler/: .gitignore  2  ChangeLog.md  Dockerfile  Makefile  Maybe  README.md  cabal.project  cabal.project.freeze  default.nix  environment.json  flake.nix  mimsa-test.prof.html  mimsa.cabal  package.yaml  pkgs.nix  shell.nix  stack.yaml  weeder.dhall
compiler/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
compiler/app/: Main.hs
compiler/benchmark/: Spec.hs
compiler/errors/: Spec.hs
compiler/nix/: sources.json
compiler/repl/: Main.hs
compiler/repl/Check/: Main.hs
compiler/repl/Compile/: Main.hs
compiler/repl/Eval/: Main.hs
compiler/repl/Init/: Main.hs
compiler/repl/Repl/: Actions.hs  Helpers.hs  Main.hs  Parser.hs  Persistence.hs  Repl.hs  ReplM.hs  Types.hs
compiler/repl/ReplNew/: Actions.hs  Helpers.hs  Main.hs  Parser.hs  Persistence.hs  ReplM.hs  Types.hs
compiler/server/: Main.hs
compiler/server/Server/: Compile.hs  EnvVars.hs  Expression.hs  Handlers.hs  Helpers.hs  Main.hs  Persistence.hs  Project.hs  Prometheus.hs  Search.hs  Servant.hs  ServerM.hs  Store.hs  Swagger.hs  Types.hs
compiler/static/modules/: Array.mimsa  Either.mimsa  Monoid.mimsa  NonEmptyArray.mimsa  Parser.mimsa  Prelude.mimsa  Reader.mimsa  State.mimsa  String.mimsa  Tree.mimsa
compiler/static/test/: failing-test.ts  test.js
compiler/swagger/: Main.hs
compiler/test/: Spec.hs
compiler/test/Test/: Actions.hs  Codegen.hs  ErrorFormat.hs  Prettier.hs  RenderErrors.hs  Serialisation.hs
compiler/test/modules/: 1.mimsa  10.mimsa  2.mimsa  3.mimsa  6.mimsa  7.mimsa  9.mimsa
core/: core.cabal
core/test/: Spec.hs
core/test/CoreTest/: Prettier.hs
core/test/Test/: Prettier.hs
llvm-calc/: CHANGELOG.md  llvm-calc.cabal
llvm-calc/app/: Main.hs
llvm-calc/src/: Calc.hs
llvm-calc/src/Calc/: ExprUtils.hs  Interpreter.hs  Parser.hs  Repl.hs  SourceSpan.hs  Types.hs
llvm-calc/test/: Main.hs
llvm-calc2/: llvm-calc2.cabal
llvm-calc2/src/Calc/: ExprUtils.hs  Interpreter.hs  Parser.hs  Repl.hs  SourceSpan.hs  TypeUtils.hs  Types.hs
llvm-calc4/: a.out  llvm-calc4.cabal
llvm-calc4/src/Calc/: ExprUtils.hs  Interpreter.hs  Parser.hs  PatternUtils.hs  TypeUtils.hs  Types.hs  Utils.hs
llvm-calc4/static/: runtime.c
llvm-calc4/test/: Main.hs
llvm-calc4/test/Test/: Helpers.hs
repl/: .gitignore  repl.cabal
repl/repl/Check/: Main.hs
repl/repl/Compile/: Main.hs
repl/repl/Eval/: Main.hs
repl/repl/Init/: Main.hs
repl/repl/Repl/: Actions.hs  Helpers.hs  Main.hs  Parser.hs  ReplM.hs  Types.hs
repl/repl/ReplNew/: Actions.hs  Helpers.hs  Main.hs  Parser.hs  Persistence.hs  ReplM.hs  Types.hs
repl/repl/Shared/: LoadProject.hs
server/: server.cabal
server/server/Server/: EnvVars.hs  Handlers.hs  Helpers.hs  Main.hs  MimsaHandler.hs  Persistence.hs  Servant.hs  ServerConfig.hs  ServerM.hs  Types.hs
smol-backend/: smol-backend.cabal
smol-backend/src/Smol/: Backend.hs
smol-backend/static/: runtime.c
smol-backend/test/: Main.hs
smol-backend/test/Test/: Helpers.hs  ParserSpec.hs
smol-backend/test/static/: Prelude.smol  State.smol  Tree.smol
smol-core/: Makefile  smol-core.cabal  
smol-core/app/: Main.hs
smol-core/src/: ExprUtils.hs  Helpers.hs  Parser.hs  Printer.hs  SourceSpan.hs  TypeUtils.hs  Typecheck.hs  Types.hs
smol-core/src/Compile/: RunLLVM.hs
smol-core/src/IR/: IRExpr.hs
smol-core/src/Interpreter/: Convert.hs  Interpret.hs  Types.hs
smol-core/src/LLVM/: Pretty.hs
smol-core/src/Parser/: Identifiers.hs  Pattern.hs  Primitives.hs  Shared.hs  Type.hs
smol-core/src/Smol/: Core.hs
smol-core/src/Transform/: FlattenPattern.hs
smol-core/src/Typecheck/: Errors.hs  Exhaustiveness.hs  FreeVars.hs  Shared.hs  Substitute.hs  Subtype.hs  Types.hs
smol-core/src/Types/: Annotation.hs  Constructor.hs  DataType.hs  Expr.hs  GetPath.hs  Identifier.hs  Pattern.hs  PatternMatchError.hs  PatternPredicate.hs  Prim.hs  SourceSpan.hs  Type.hs  TypeName.hs
smol-core/test/: Main.hs
smol-core/test/Test/: BuiltInTypes.hs  EliminateGlobalsSpec.hs  Helpers.hs  ParserSpec.hs  TransformSpec.hs  TypecheckSpec.hs  TypeclassSpec.hs
smol-core/test/static/: Either.smol  Eq.smol  Expr.smol  Functor.smol  Globals.smol  Maybe.smol  Monoid.smol  Prelude.smol  Reader.smol  Semigroup.smol  Show.smol  Simple.smol  State.smol  These.smol  Tree.smol
smol-interpreter/: smol-interpreter.cabal
smol-interpreter/src/Smol/: Interpreter.hs
smol-interpreter/test/: Main.hs
smol-interpreter/test/Test/: Helpers.hs
smol-modules/: smol-modules.cabal
smol-modules/test/: Main.hs
smol-modules/test/Test/: Helpers.hs
smol-modules/test/static/: Either.smol  Eq.smol  Expr.smol  Functor.smol  Maybe.smol  Monoid.smol  Prelude.smol  Reader.smol  Semigroup.smol  Show.smol  State.smol  These.smol  Tree.smol
smol-repl/: .gitignore  smol-repl.cabal
smol-repl/app/: Main.hs
smol-repl/src/: Main.hs  Repl.hs
smol-repl/src/Repl/: Actions.hs  Helpers.hs  Persistence.hs
smol-repl/src/Smol/: Check.hs  Repl.hs
smol-typechecker/: smol-typechecker.cabal
smol-typechecker/test/: Main.hs
smol-typechecker/test/Test/: Helpers.hs  TransformSpec.hs  TypecheckSpec.hs
typechecker/: .gitignore  typechecker.cabal
typechecker/static/modules/: Either.mimsa  Maybe.mimsa  State.mimsa  Tree.mimsa
ui/: .env  (+8 more)
(+2050 files in other folders)
