cabal-version:      2.2
name:               backends
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/function-boys#readme>

homepage:           https://github.com/danieljharvey/mimsa#readme
bug-reports:        https://github.com/danieljharvey/mimsa/issues
author:             Daniel J Harvey
maintainer:         danieljamesharvey@gmail.com
copyright:          2021 Daniel J Harvey
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  static/backend/es-modules-js/stdlib.mjs
  static/backend/typescript/stdlib.ts

source-repository head
  type:     git
  location: https://github.com/danieljharvey/mimsa

common common-all
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

library
  import:             common-all
  exposed-modules:
    Language.Mimsa.Backend
    Language.Mimsa.Backend.BackendError
    Language.Mimsa.Backend.Javascript.Printer
    Language.Mimsa.Backend.Output
    Language.Mimsa.Backend.Shared
    Language.Mimsa.Backend.Types
    Language.Mimsa.Backend.Typescript.DataType
    Language.Mimsa.Backend.Typescript.FromDataType
    Language.Mimsa.Backend.Typescript.FromExpr
    Language.Mimsa.Backend.Typescript.FromType
    Language.Mimsa.Backend.Typescript.Monad
    Language.Mimsa.Backend.Typescript.Patterns
    Language.Mimsa.Backend.Typescript.Printer
    Language.Mimsa.Backend.Typescript.Types

  hs-source-dirs:     src
  default-extensions: Strict
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , cryptonite
    , diagnose
    , directory
    , exceptions
    , file-embed
    , hashable
    , megaparsec
    , memory
    , monad-logger
    , mtl
    , openapi3
    , parallel
    , parser-combinators
    , prettyprinter
    , QuickCheck
    , text
    , transformers

  default-language:   Haskell2010

test-suite backends-tests
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Test.Backend.ESModulesJS
    Test.Backend.Typescript
    Test.Codegen.Shared
    Test.Utils.Helpers

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , backends
    , base           >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , exceptions
    , file-embed
    , hspec
    , mtl
    , prettyprinter
    , text
    , transformers

  default-language: Haskell2010
