cabal-version: 2.2
name:          benchmark
version:       0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/function-boys#readme>

homepage:      https://github.com/danieljharvey/mimsa#readme
bug-reports:   https://github.com/danieljharvey/mimsa/issues
author:        Daniel J Harvey
maintainer:    danieljamesharvey@gmail.com
copyright:     2021 Daniel J Harvey
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/danieljharvey/mimsa

common common-all
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

benchmark benchmark
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   benchmark
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , criterion
    , cryptonite
    , diagnose
    , directory
    , exceptions
    , file-embed
    , hashable
    , megaparsec
    , memory
    , mimsa
    , monad-logger
    , mtl
    , openapi3
    , parallel
    , parser-combinators
    , prettyprinter
    , QuickCheck
    , servant
    , servant-server
    , text
    , transformers
    , wasm

  default-language: Haskell2010
