cabal-version:      2.2
name:               mimsa
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/function-boys#readme>

homepage:           https://github.com/danieljharvey/mimsa#readme
bug-reports:        https://github.com/danieljharvey/mimsa/issues
author:             Daniel J Harvey
maintainer:         danieljamesharvey@gmail.com
copyright:          2021 Daniel J Harvey
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  static/modules/Array.mimsa
  static/modules/Either.mimsa
  static/modules/Maybe.mimsa
  static/modules/Monoid.mimsa
  static/modules/NonEmptyArray.mimsa
  static/modules/Parser.mimsa
  static/modules/Prelude.mimsa
  static/modules/Reader.mimsa
  static/modules/State.mimsa
  static/modules/String.mimsa
  static/modules/These.mimsa
  static/modules/Tree.mimsa

source-repository head
  type:     git
  location: https://github.com/danieljharvey/mimsa

common common-all
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

library
  import:             common-all
  exposed-modules:
    Language.Mimsa.Actions.Compile
    Language.Mimsa.Actions.Helpers.Build
    Language.Mimsa.Actions.Helpers.GetDepsForStoreExpression
    Language.Mimsa.Actions.Helpers.LookupExpression
    Language.Mimsa.Actions.Helpers.NumberStoreExpression
    Language.Mimsa.Actions.Helpers.Parse
    Language.Mimsa.Actions.Interpret
    Language.Mimsa.Actions.Modules.Bind
    Language.Mimsa.Actions.Modules.Check
    Language.Mimsa.Actions.Modules.Evaluate
    Language.Mimsa.Actions.Modules.Imports
    Language.Mimsa.Actions.Modules.RunTests
    Language.Mimsa.Actions.Modules.ToStoreExpressions
    Language.Mimsa.Actions.Modules.Typecheck
    Language.Mimsa.Actions.Monad
    Language.Mimsa.Actions.Optimise
    Language.Mimsa.Actions.Types
    Language.Mimsa.Backend.Wasm.Compile
    Language.Mimsa.Interpreter.App
    Language.Mimsa.Interpreter.If
    Language.Mimsa.Interpreter.Infix
    Language.Mimsa.Interpreter.Interpret
    Language.Mimsa.Interpreter.Let
    Language.Mimsa.Interpreter.Monad
    Language.Mimsa.Interpreter.PatternMatch
    Language.Mimsa.Interpreter.RecordAccess
    Language.Mimsa.Interpreter.SimpleExpr
    Language.Mimsa.Interpreter.Types
    Language.Mimsa.Logging
    Language.Mimsa.Modules.Check
    Language.Mimsa.Modules.Dependencies
    Language.Mimsa.Modules.FromParts
    Language.Mimsa.Modules.HashModule
    Language.Mimsa.Modules.Monad
    Language.Mimsa.Modules.Parse
    Language.Mimsa.Modules.Prelude
    Language.Mimsa.Modules.Pretty
    Language.Mimsa.Modules.ToStoreExprs
    Language.Mimsa.Modules.Typecheck
    Language.Mimsa.Modules.Uses
    Language.Mimsa.Project
    Language.Mimsa.Project.Helpers
    Language.Mimsa.Project.SourceSpan
    Language.Mimsa.Project.Stdlib
    Language.Mimsa.Project.TypeSearch
    Language.Mimsa.Store
    Language.Mimsa.Store.ExtractTypes
    Language.Mimsa.Store.Hashing
    Language.Mimsa.Store.Helpers
    Language.Mimsa.Store.Persistence
    Language.Mimsa.Store.ResolveDataTypes
    Language.Mimsa.Store.ResolvedDeps
    Language.Mimsa.Store.Storage
    Language.Mimsa.Tests.Generate
    Language.Mimsa.Tests.Helpers
    Language.Mimsa.Tests.UnitTest
    Language.Mimsa.Transform.BetaReduce
    Language.Mimsa.Transform.EtaReduce
    Language.Mimsa.Transform.FindUnused
    Language.Mimsa.Transform.FindUses
    Language.Mimsa.Transform.FlattenLets
    Language.Mimsa.Transform.FloatDown
    Language.Mimsa.Transform.FloatUp
    Language.Mimsa.Transform.Inliner
    Language.Mimsa.Transform.Shared
    Language.Mimsa.Transform.SimplifyPatterns
    Language.Mimsa.Transform.TrimDeps
    Language.Mimsa.Typechecker
    Language.Mimsa.Typechecker.BuiltIns
    Language.Mimsa.Typechecker.CreateEnv
    Language.Mimsa.Typechecker.DataTypes
    Language.Mimsa.Typechecker.DisplayError
    Language.Mimsa.Typechecker.Elaborate
    Language.Mimsa.Typechecker.Environment
    Language.Mimsa.Typechecker.Exhaustiveness
    Language.Mimsa.Typechecker.FlattenRow
    Language.Mimsa.Typechecker.Generalise
    Language.Mimsa.Typechecker.NormaliseTypes
    Language.Mimsa.Typechecker.NumberVars
    Language.Mimsa.Typechecker.OutputTypes
    Language.Mimsa.Typechecker.ScopeTypeVar
    Language.Mimsa.Typechecker.Solve
    Language.Mimsa.Typechecker.TcMonad
    Language.Mimsa.Typechecker.Typecheck
    Language.Mimsa.Typechecker.TypedHoles
    Language.Mimsa.Typechecker.Unify
    Language.Mimsa.Types.Error
    Language.Mimsa.Types.Error.CodegenError
    Language.Mimsa.Types.Error.InterpreterError
    Language.Mimsa.Types.Error.ModuleError
    Language.Mimsa.Types.Error.PatternMatchError
    Language.Mimsa.Types.Error.ProjectError
    Language.Mimsa.Types.Error.ResolverError
    Language.Mimsa.Types.Error.StoreError
    Language.Mimsa.Types.Error.TypeError
    Language.Mimsa.Types.Interpreter.Stack
    Language.Mimsa.Types.Project
    Language.Mimsa.Types.Project.Project
    Language.Mimsa.Types.Project.ProjectHash
    Language.Mimsa.Types.Project.SaveProject
    Language.Mimsa.Types.Project.SourceItem
    Language.Mimsa.Types.Project.SourceSpan
    Language.Mimsa.Types.Project.Usage
    Language.Mimsa.Types.Project.Versioned
    Language.Mimsa.Types.Project.VersionedMap
    Language.Mimsa.Types.Store
    Language.Mimsa.Types.Store.Bindings
    Language.Mimsa.Types.Store.ExprHash
    Language.Mimsa.Types.Store.ResolvedDeps
    Language.Mimsa.Types.Store.RootPath
    Language.Mimsa.Types.Store.Store
    Language.Mimsa.Types.Store.StoreExpression
    Language.Mimsa.Types.Store.TypeBindings
    Language.Mimsa.Types.Tests
    Language.Mimsa.Types.Typechecker
    Language.Mimsa.Types.Typechecker.Constraint
    Language.Mimsa.Types.Typechecker.Environment
    Language.Mimsa.Types.Typechecker.FoundPath
    Language.Mimsa.Types.Typechecker.Scheme
    Language.Mimsa.Types.Typechecker.Substitutions
    Language.Mimsa.Types.Typechecker.TypeConstructor
    Language.Mimsa.Types.Typechecker.Unique
    Language.Mimsa.Types.Typechecker.UniVar

  hs-source-dirs:     src
  default-extensions: Strict
  build-depends:
    , aeson
    , backends
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , cryptonite
    , diagnose
    , directory
    , exceptions
    , file-embed
    , hashable
    , megaparsec
    , memory
    , monad-logger
    , mtl
    , openapi3
    , parallel
    , parser-combinators
    , prettyprinter
    , QuickCheck
    , servant
    , servant-server
    , text
    , transformers
    , unordered-containers
    , wasm
    , writer-cps-mtl

  default-language:   Haskell2010

test-suite mimsa-test
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Test.Actions.BindModule
    Test.Actions.Build
    Test.Actions.Compile
    Test.Actions.Evaluate
    Test.Backend.ESModulesJSEndToEnd
    Test.Backend.RunNode
    Test.Backend.TypescriptEndToEnd
    Test.Backend.Wasm
    Test.Codegen.Shared
    Test.Data.Prelude
    Test.Data.Project
    Test.Modules.Check
    Test.Modules.Repl
    Test.Modules.Test
    Test.Modules.ToStoreExprs
    Test.Modules.Uses
    Test.Project.NormaliseType
    Test.Project.SourceSpan
    Test.Project.Stdlib
    Test.RenderErrors
    Test.Serialisation
    Test.Tests.Properties
    Test.Transform.BetaReduce
    Test.Transform.EtaReduce
    Test.Transform.FindUnused
    Test.Transform.FindUses
    Test.Transform.FlattenLets
    Test.Transform.FloatDown
    Test.Transform.FloatUp
    Test.Transform.Inliner
    Test.Transform.SimplifyPatterns
    Test.Typechecker.DataTypes
    Test.Typechecker.Elaborate
    Test.Typechecker.Exhaustiveness
    Test.Typechecker.NumberVars
    Test.Typechecker.ScopeTypeVar
    Test.Typechecker.Substitutions
    Test.Typechecker.Typecheck
    Test.Typechecker.Unify
    Test.Utils.Compilation
    Test.Utils.Helpers
    Test.Utils.Serialisation

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , backends
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , cryptonite
    , diagnose
    , directory
    , exceptions
    , file-embed
    , hashable
    , hspec
    , megaparsec
    , memory
    , mimsa
    , monad-logger
    , mtl
    , openapi3
    , parallel
    , parser-combinators
    , prettyprinter
    , QuickCheck
    , servant
    , servant-server
    , text
    , transformers
    , typed-process
    , unordered-containers
    , wasm

  default-language: Haskell2010

benchmark mimsa-benchmark
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   benchmark
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , criterion
    , cryptonite
    , diagnose
    , directory
    , exceptions
    , file-embed
    , hashable
    , megaparsec
    , memory
    , mimsa
    , monad-logger
    , mtl
    , openapi3
    , parallel
    , parser-combinators
    , prettyprinter
    , QuickCheck
    , servant
    , servant-server
    , text
    , transformers
    , wasm

  default-language: Haskell2010
