cabal-version: 2.2
name:          core
version:       0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/function-boys#readme>

homepage:      https://github.com/danieljharvey/mimsa#readme
bug-reports:   https://github.com/danieljharvey/mimsa/issues
author:        Daniel J Harvey
maintainer:    danieljamesharvey@gmail.com
copyright:     2021 Daniel J Harvey
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/danieljharvey/mimsa

common common-all
  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

library
  import:             common-all
  exposed-modules:
    Language.Mimsa.Core
    Language.Mimsa.Core.ExprUtils
    Language.Mimsa.Core.Parser
    Language.Mimsa.Core.Parser.Helpers
    Language.Mimsa.Core.Parser.Identifier
    Language.Mimsa.Core.Parser.Identifiers
    Language.Mimsa.Core.Parser.Language
    Language.Mimsa.Core.Parser.Lexeme
    Language.Mimsa.Core.Parser.Literal
    Language.Mimsa.Core.Parser.Module
    Language.Mimsa.Core.Parser.MonoType
    Language.Mimsa.Core.Parser.Pattern
    Language.Mimsa.Core.Parser.TypeDecl
    Language.Mimsa.Core.Parser.Types
    Language.Mimsa.Core.Printer
    Language.Mimsa.Core.Types.AST
    Language.Mimsa.Core.Types.AST.Annotation
    Language.Mimsa.Core.Types.AST.DataType
    Language.Mimsa.Core.Types.AST.Expr
    Language.Mimsa.Core.Types.AST.Identifier
    Language.Mimsa.Core.Types.AST.InfixOp
    Language.Mimsa.Core.Types.AST.Literal
    Language.Mimsa.Core.Types.AST.Operator
    Language.Mimsa.Core.Types.AST.Pattern
    Language.Mimsa.Core.Types.AST.Spread
    Language.Mimsa.Core.Types.AST.StringPart
    Language.Mimsa.Core.Types.AST.StringType
    Language.Mimsa.Core.Types.Identifiers
    Language.Mimsa.Core.Types.Identifiers.Name
    Language.Mimsa.Core.Types.Identifiers.TestName
    Language.Mimsa.Core.Types.Identifiers.TyCon
    Language.Mimsa.Core.Types.Identifiers.TypeIdentifier
    Language.Mimsa.Core.Types.Identifiers.TypeName
    Language.Mimsa.Core.Types.Identifiers.TyVar
    Language.Mimsa.Core.Types.Module
    Language.Mimsa.Core.Types.Module.DefIdentifier
    Language.Mimsa.Core.Types.Module.Entity
    Language.Mimsa.Core.Types.Module.Module
    Language.Mimsa.Core.Types.Module.ModuleHash
    Language.Mimsa.Core.Types.Module.ModuleName
    Language.Mimsa.Core.Types.Type
    Language.Mimsa.Core.Types.Type.MonoType
    Language.Mimsa.Core.TypeUtils
    Language.Mimsa.Core.Utils

  hs-source-dirs:     src
  default-extensions: Strict
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , hashable
    , megaparsec
    , mtl
    , openapi3
    , parser-combinators
    , prettyprinter
    , servant
    , servant-server
    , text
    , transformers

  default-language:   Haskell2010

test-suite core-test
  import:           common-all
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    CoreTest.Parser.DataTypes
    CoreTest.Parser.MonoTypeParser
    CoreTest.Parser.Pattern
    CoreTest.Parser.Syntax
    CoreTest.Prettier
    CoreTest.Utils.Helpers

  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , base                >=4.7 && <5
    , bifunctors
    , binary
    , bytestring
    , containers
    , core
    , hashable
    , hspec
    , megaparsec
    , mtl
    , openapi3
    , parser-combinators
    , prettyprinter
    , servant
    , servant-server
    , text
    , transformers

  default-language: Haskell2010
