cabal-version:      2.4
name:               smol-core
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Harvey
maintainer:         danieljamesharvey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  static/runtime.c

common shared
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

  build-depends:
    , aeson
    , array
    , base
    , bytestring
    , containers
    , diagnose
    , directory
    , file-embed
    , llvm-hs-pretty
    , llvm-hs-pure
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , process
    , string-conversions
    , text
    , unix

library
  import:           shared

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Calc
    Calc.Compile.RunLLVM
    Calc.Parser
    Calc.Parser.Shared
    Calc.SourceSpan
    Calc.Types.Annotation
    Calc.Types.Prim
    Calc.Types.SourceSpan

test-suite smol-core-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  hs-source-dirs:   src
  build-depends:
    , hspec       >=2.8.3 && <3
    , hspec-core  >=2.8.3 && <3

  other-modules:
    Calc
    Calc.Compile.RunLLVM
    Calc.ExprUtils
    Calc.Interpreter
    Calc.Interpreter.Interpret
    Calc.Parser
    Calc.Parser.Expr
    Calc.Parser.Types
    Calc.Parser.Shared
    Calc.SourceSpan
    Calc.Types
    Calc.Types.Annotation
    Calc.Types.Expr
    Calc.Types.Prim
    Calc.Types.SourceSpan
    Test.Interpreter.InterpreterSpec
    Test.Parser.ParserSpec

  main-is:          Main.hs
  default-language: Haskell2010
