cabal-version:      2.4
name:               llvm-calc4
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Daniel Harvey
maintainer:         danieljamesharvey@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  static/runtime.c

common shared
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall
    -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wredundant-constraints -Wmissing-deriving-strategies

  build-depends:
    , base
    , containers
    , diagnose
    , directory
    , file-embed
    , hashable
    , haskeline
    , llvm-hs-pretty
    , llvm-hs-pure
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , process
    , string-conversions
    , text
    , unix
    , unordered-containers

  other-modules:
    Calc
    Calc.Compile.RunLLVM
    Calc.Compile.ToLLVM
    Calc.ExprUtils
    Calc.Interpreter
    Calc.Parser
    Calc.Parser.Expr
    Calc.Parser.Function
    Calc.Parser.Identifier
    Calc.Parser.Module
    Calc.Parser.Primitives
    Calc.Parser.Shared
    Calc.Parser.Type
    Calc.Parser.Types
    Calc.Repl
    Calc.SourceSpan
    Calc.Typecheck.Elaborate
    Calc.Typecheck.Error
    Calc.Typecheck.Types
    Calc.Types
    Calc.Types.Annotation
    Calc.Types.Expr
    Calc.Types.Function
    Calc.Types.FunctionName
    Calc.Types.Identifier
    Calc.Types.Module
    Calc.Types.Prim
    Calc.Types.Type
    Calc.TypeUtils

library
  import:           shared

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite llvm-calc4-tests
  import:           shared
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  hs-source-dirs:   src
  build-depends:
    , hspec       >=2.8.3 && <3
    , hspec-core  >=2.8.3 && <3

  main-is:          Main.hs
  default-language: Haskell2010
  other-modules:
    Test.Interpreter.InterpreterSpec
    Test.LLVM.LLVMSpec
    Test.Parser.ParserSpec
    Test.Typecheck.TypecheckSpec

executable llvm-calc4
  main-is:          Main.hs
  import:           shared
  hs-source-dirs:   app
  hs-source-dirs:   src
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , containers
    , diagnose
    , directory
    , file-embed
    , hashable
    , haskeline
    , llvm-calc4
    , llvm-hs-pretty
    , llvm-hs-pure
    , megaparsec
    , mtl
    , parser-combinators
    , prettyprinter
    , process
    , string-conversions
    , text
    , unix
    , unordered-containers

  default-language: Haskell2010
